[gd_scene load_steps=5 format=3 uid="uid://cga7mrx64tc3a"]

[ext_resource type="Texture2D" uid="uid://c1jstal8qrxys" path="res://Assets/SFCD/Items/EmptyItemSlot.png" id="1"]
[ext_resource type="Script" path="res://General/BattleActionsMenu/DropMenu/DropMenu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b0u3srggt8s74" path="res://Assets/SF1/ShiningForceTextBackground.png" id="3"]
[ext_resource type="PackedScene" path="res://General/BattleActionsMenu/RedSelectionBorder/RedSelectionBorder.tscn" id="5"]

[node name="DropMenuRoot" type="Node2D"]
script = ExtResource("2")

[node name="SlotUpSprite" type="Sprite2D" parent="."]
position = Vector2(24, 12)
texture = ExtResource("1")

[node name="SlotLeftSprite" type="Sprite2D" parent="."]
position = Vector2(8, 24)
texture = ExtResource("1")

[node name="SlotRightSprite" type="Sprite2D" parent="."]
position = Vector2(40, 24)
texture = ExtResource("1")

[node name="SlotDownSprite" type="Sprite2D" parent="."]
position = Vector2(24, 36)
texture = ExtResource("1")

[node name="ItemInfoNinePatchRect" type="NinePatchRect" parent="."]
offset_left = 58.0
offset_top = 8.0
offset_right = 172.0
offset_bottom = 48.0
texture = ExtResource("3")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TypeNameLabel" type="Label" parent="ItemInfoNinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -25.0
text = "ITEM TYPE"

[node name="WeaponNameLabel" type="Label" parent="ItemInfoNinePatchRect"]
layout_mode = 0
anchor_left = -0.00218987
anchor_right = 0.99781
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 17.0
offset_right = -6.74158
offset_bottom = -6.0
text = "ITEM NAME"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource("5")]
position = Vector2(16, 24)
